[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai = "1.6.1"
actix-web = "4.0.1"
listenfd = "0.3"
dotenv = "0.11"
log = "0.4"
env_logger = "0.6"
serde = {version ="1.0.144", features = ["derive"]}
serde_json = "1.0.85"